nullaway_error_BAB85D24-F8EB-4515-8306-4714ED626798.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-jdbc/src/main/java/org/springframework/jdbc/support/incrementer/AbstractDataFieldMaxValueIncrementer.java:79: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return this.dataSource;
		^
    (see http://t.uber.com/nullaway )
